--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     <div class="aboutme">
       <div class="aboutmetitle">
         <p>
-          My name is Logan Hussung. I am an up and coming designer and developer in the Minneapolis tech scene. Born and raised, I have lived in Minnesota my whole life. Alumni of the University of Minnesota and future alumni of The Iron Yard. I have decided to change my career path for a few reasons but mainly because I wanted to get into something I truly enjoy.
+          My name is Logan Hussung. I am an up and coming designer and developer in the Minneapolis tech scene. Born and raised, I have lived in Minnesota my whole life. Alumni of the University of Minnesota and future alumni of The Iron Yard. I have decided to change my career path for a few reasons but mainly because I wanted to get into something I truly enjoy. I am excited for this change.
         </p>
       </div>
       <div class="pictureofme">
