--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       </div>
       <div class="siteimages">
         <div class="site">
-          <img src="Images/gameofthrones.jpg" alt="Japan" />
+          <img src="Images/entertainment.jpg" alt="Entertainment" />
             <div class="siteinfo">
               <h3>Entertainment</h3>
               <h5>Learn More!</h5>
